<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/new_grocery_ingredient"
        android:visibility="gone"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:layout_marginBottom="@dimen/text_margin"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:inputType="textAutoComplete|text"
            android:hint="@string/enter_ingredient_name"
            android:id="@+id/new_grocery_ingredient_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAppearance="@style/CardMainStyle"
            android:textAlignment="center"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/new_grocery_ingredient_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CardHeadingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grocery_quantity_title"
                    android:textAlignment="center" />

                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/new_grocery_ingredient_quantity"
                    style="@style/CardContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_weight="1">

            <Button
                android:text="@string/add"
                style="@style/ActionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_grocery_ingredient_add"
                android:layout_weight="1" />

            <Button
                android:text="@string/cancel"
                style="@style/ActionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_grocery_ingredient_cancel"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <ViewSwitcher
        android:id="@+id/grocery_ingredient_list_view_switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grocery_ingredient_list_buttons"
        android:layout_alignParentTop="true"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@android:anim/slide_out_right">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/grocery_ingredient_list_recycler_view"
            android:name="com.cornucopia.cornucopia_app.GroceryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            tools:context=".activities.grocery.GroceryFragment"
            tools:listitem="@layout/grocery_ingredient_card" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/empty_grocery_message" />
    </ViewSwitcher>

    <LinearLayout
        android:id="@+id/grocery_ingredient_list_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/grocery_ingredient_list_action_button_share"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grocery_export_pdf_button_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/grocery_ingredient_list_action_button_make_now"
            style="@style/ActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grocery_what_you_could_make_now_button_text"
            android:textAlignment="center" />

    </LinearLayout>

</LinearLayout>
