<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/recipe_home_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/lightBackground">

        <LinearLayout
            android:id="@+id/pantry_ingredient_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            app:layout_heightPercent="85%"
            app:layout_widthPercent="100%">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/recipe_home_action_button_make_now"
                        style="@style/ActionButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/recipe_home_make_now_button_text"
                        android:textAlignment="viewStart" />

                    <TextView
                        style="@style/CardHeadingStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-15dp"
                        android:paddingLeft="10dp"
                        android:text="@string/what_you_can_make_description" />

                    <ViewSwitcher
                        android:id="@+id/recipe_home_make_now_view_switcher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inAnimation="@android:anim/slide_in_left"
                        android:outAnimation="@android:anim/slide_out_right"
                        android:paddingLeft="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="5dp">

                            <com.joanzapata.iconify.widget.IconTextView
                                android:id="@+id/recipe_home_make_now_go_to_grocery_button"
                                style="@style/ActionButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/empty_grocery_message" />

                            <com.joanzapata.iconify.widget.IconTextView
                                android:id="@+id/recipe_home_make_now_go_to_pantry_button"
                                style="@style/ActionButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/empty_pantry_message" />
                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recipe_home_make_now_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_above="@+id/recipe_home_make_now_recycler_view"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:orientation="horizontal"
                            app:layoutManager="android.support.v7.widget.LinearLayoutManager"></android.support.v7.widget.RecyclerView>
                    </ViewSwitcher>

                    <Button
                        android:id="@+id/recipe_home_action_button_could_make"
                        style="@style/ActionButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="10dp"
                        android:text="@string/recipe_home_could_make_button_text"
                        android:textAlignment="viewStart" />

                    <TextView
                        style="@style/CardHeadingStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-15dp"
                        android:paddingLeft="10dp"
                        android:text="@string/what_you_could_make_description" />

                    <ViewSwitcher
                        android:id="@+id/recipe_home_could_make_view_switcher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inAnimation="@android:anim/slide_in_left"
                        android:outAnimation="@android:anim/slide_out_right">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <com.joanzapata.iconify.widget.IconTextView
                                android:id="@+id/recipe_could_make_go_to_grocery_button"
                                style="@style/ActionButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/empty_grocery_message" />

                            <com.joanzapata.iconify.widget.IconTextView
                                android:id="@+id/recipe_home_could_make_go_to_pantry_button"
                                style="@style/ActionButtonStyle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/empty_pantry_message" />
                        </LinearLayout>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recipe_home_could_make_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_above="@+id/recipe_home_make_now_recycler_view"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:orientation="horizontal"
                            android:paddingLeft="5dp"
                            app:layoutManager="android.support.v7.widget.LinearLayoutManager"></android.support.v7.widget.RecyclerView>
                    </ViewSwitcher>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/recipe_home_action_button_browse"
                            style="@style/ActionButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:text="@string/recipe_home_browse_button_text"
                            android:textAlignment="viewStart" />

                        <TextView
                            style="@style/CardHeadingStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-15dp"
                            android:paddingLeft="10dp"
                            android:text="@string/browse_recipes_description" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recipe_home_browse_recipes"
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:layout_above="@+id/recipe_home_make_now_recycler_view"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:orientation="horizontal"
                            android:paddingLeft="5dp"
                            app:layoutManager="android.support.v7.widget.LinearLayoutManager"></android.support.v7.widget.RecyclerView>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pantry_ingredient_list_grocery_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            app:layout_heightPercent="10%"
            app:layout_widthPercent="100%">

            <android.support.v7.widget.CardView
                android:id="@+id/pantry_ingredient_list_reveal_grocery_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.joanzapata.iconify.widget.IconTextView
                        style="@style/CardMainStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/recipes_home_show_favorites_text"
                        android:textAlignment="center" />

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/pantry_ingredient_list_grocery_list_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/text_margin"
                        android:text="@string/grocery_list_add_item_text"
                        android:visibility="invisible" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <FrameLayout
                android:id="@+id/pantry_ingredient_grocery_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_small" />
        </LinearLayout>

    </android.support.percent.PercentRelativeLayout>
</FrameLayout>
