<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/grocery_ingredient_quantity_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/text_margin_small"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin_small"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_toEndOf="@+id/grocery_ingredient_name"
                android:text="@string/grocery_quantity_title"
                android:textAlignment="textEnd"
                android:textAppearance="@style/CardHeadingStyle" />

            <TextView
                android:id="@+id/grocery_ingredient_quantity"
                style="@style/CardContentStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/grocery_ingredient_quantity_header"
                android:layout_marginBottom="@dimen/text_margin_small"
                android:layout_marginEnd="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_toEndOf="@+id/grocery_ingredient_name"
                android:textAlignment="textEnd"
                tools:text="1 gallon" />

            <TextView
                android:id="@+id/grocery_ingredient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginRight="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:textAppearance="@style/CardMainStyle"
                tools:text="Milk" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/grocery_ingredient_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CardHeadingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grocery_quantity_title"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/grocery_ingredient_detail_quantity"
                    style="@style/CardContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="1 gallon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/CardHeadingStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grocery_expiration_date_title"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/grocery_ingredient_detail_expiration_date"
                    style="@style/CardContentStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="June 1, 2017" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/grocery_ingredient_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/grocery_ingredient_action_remove"
                style="@style/ActionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/grocery_remove_button_text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/grocery_ingredient_action_move"
                style="@style/ActionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/grocery_move_to_pantry_button_text"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

